Modify the Dockerfile to make the example working